# DfyLang

./: CMakeLists.txt  README.md  a  grammar.h  main.c  zen
_dfy/samples/: main.dfy
_dfy/std/: std.dfy-lib
_dfy/std/io/: io.dfy
_dfy/std/math/: math.dfy
_dfy/templates/console/: main.dfy
compiler/: ir_generator.c  ir_optimizer.c
compiler/include/: ir_generator.h  ir_instruction.h  ir_optimizer.h
interpeter/: DObject.h
parser/: analyzer.c  grammatic.h  lexer.c  lexer.h  node.h  parser.c  parser.h  semantic_analyzer.c  syntax_analyzer.c  token.h  tokenizer.c
parser/include/: ASTNode.h  analyzer.h  ast.h  lexer.h  node.h  parser.h  semantic_analyzer.h  syntax_analyzer.h  table.h  token.h  tokenizer.h
